<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OnBoardingFragment">

    <ImageView
        android:id="@+id/iv_veget1"
        android:layout_width="540dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/manhinhchao2" />

    <TextView
        android:id="@+id/tv_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_veget1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lobster"
        android:text="@string/shopping"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_shopping"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginRight="90dp"
        android:text="@string/shopping_every" />



    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:padding="12dp">

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="55dp"
            app:ci_drawable="@drawable/bg_green" />


    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="48dp"
        android:layout_weight="1"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>