<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_margin="8dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back_48px"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/iv_Back"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Giới thiệu"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_size_XXL"
            android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv5"
            android:layout_margin="20dp"
            android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sp"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/img"
                android:layout_marginLeft="70dp"
                android:layout_below="@id/tv_about_us"/>
            <TextView
                android:id="@+id/tv_gt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv6"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:layout_below="@id/iv_sp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sp1"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_4"
                android:layout_marginLeft="70dp"
                android:layout_below="@id/tv_gt"/>
            <TextView
                android:id="@+id/tv_gt2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv7"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:layout_below="@id/iv_sp1"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sp2"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_5"
                android:layout_marginLeft="70dp"
                android:layout_below="@id/tv_gt2"/>
            <TextView
                android:id="@+id/tv_gt3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv8"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:layout_below="@id/iv_sp2"/>
            <TextView
                android:id="@+id/tv_gt4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv9"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:layout_below="@id/tv_gt3"/>

        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>