<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/img_Logo"
        android:layout_marginTop="100dp"
        android:text="@string/changepas"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etCoder"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_bg"
        android:hint="@string/code_ver"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints"

        />

    <EditText
        android:id="@+id/etNew"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_bg"
        android:hint="@string/new_pas"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints"

        />

    <EditText
        android:id="@+id/etEnter"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_bg"
        android:hint="@string/enter_new"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/backgr_button"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>