<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/ivCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_shopping_cart" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivSp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/rl1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/tv_tenSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lobster"
        android:text="@string/tv1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_KhoiLuong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:layout_below="@id/tv_tenSp"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"/>

    <LinearLayout
        android:id="@+id/rlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_KhoiLuong"
        android:gravity="center_horizontal|center"
        android:layout_margin="12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_xanh"
            android:text="250gr"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGram2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500gr"
            android:background="@drawable/border_trang"
            android:layout_marginLeft="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGram3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="750gr"
            android:background="@drawable/border_trang"
            android:layout_marginLeft="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGram4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1kg"
            android:background="@drawable/border_trang"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlButton"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tv3" />

    <LinearLayout
        android:id="@+id/llchoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"

        >
        <ImageView
            android:id="@+id/iv_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_horizontal_rule"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="-5dp"
            android:layout_marginLeft="5dp"/>
        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResgister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llchoose"


        android:background="@drawable/backgr_button"
       android:layout_centerInParent="true"
        android:text="@string/buy_now"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>