<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".activity.RegisterActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/logo"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/guideline5"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/guideline5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@drawable/round_bg"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:src="@drawable/account_circle_24px"/>
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:background="@null"
                android:textColor="@color/black"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/round_bg"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:src="@drawable/lock_24px"/>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:background="@null"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:background="@drawable/round_bg"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:src="@drawable/mail_24px"/>
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:background="@null"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResgister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgr_button"
            android:text="@string/register"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>